--- a/programaCurso.html
+++ b/programaCurso.html
@@ -64,5 +64,10 @@
         </ul>
     </div>
     </div>
+
+    <br><br>
+
+    <a href="index.html">CV Messi</a>
+    <a href="formulario.html">Formulario</a>
 </body>
 </html>
