--- a/formulario.html
+++ b/formulario.html
@@ -30,5 +30,9 @@
 
         <input type="submit" value="Enviar">
     </form>
+    <br><br>
+
+    <a href="programaCurso.html">Programa del Curso</a>
+    <a href="index.html">CV Messi</a>
 </body>
 </html>
