--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
         <li>2022:<strong>Finalissima</strong></li>
         <li>2022:<strong>Copa Mundial de la FIFA - Qatar 2022</strong></li>
     </ul>
+    <br><br>
 
+    <a href="programaCurso.html">Programa del Curso</a>
+    <a href="formulario.html">Formulario</a>
     
 </body>
 </html>
